# fitz

./: CLAUDE.md  Cargo.toml  LICENSE  readme.md
.claude/skills/fitz-review/: SKILL.md
.plan/: analytics-implementation-plan.md  analytics-metrics-plan.md  analytics.md  design-aberration-inspector.md  design-rgb-statistics.md  design-simd.md  design-stats-caching.md  final-push.md  fitsmith-implementation-plan.md  fitsmith-spec.md  optimizations.md  quickfit-implementation-plan.md  quickfit-spec.md  tier-1-plan.md  tier-2-plan.md
docs/: todo.md
fitsmith/: Cargo.toml  build.rs  readme.md
fitsmith/scripts/: package-unix.sh  package-windows.ps1
fitsmith/src/: cache.rs  chart.rs  chart_svg.rs  controller.rs  doc.rs  files.rs  image.rs  main.rs  view.rs
fitsmith/src/controller/: analytics.rs  convert.rs  export.rs  inspect.rs  mod.rs  viewer.rs
fitsmith/ui/: aberration.slint  about.slint  analytics.slint  app.slint  chart.slint  confirm.slint  dialog.slint  export.slint  file_list.slint  header_view.slint  image_view.slint  info_panel.slint  operation.slint  scrolling.slint  stats_panel.slint  status_bar.slint  toolbar.slint  types.slint  widgets.slint
fitz-cli/: Cargo.toml  readme.md
fitz-cli/src/: compress.rs  copy_header.rs  debayer.rs  decompress.rs  hash.rs  info.rs  io_prompt.rs  kitty.rs  main.rs  options.rs  preview.rs  split_channel.rs  stretch.rs  test_support.rs
fitz-core/: Cargo.toml
fitz-core/src/: analytics.rs  compress.rs  copy_header.rs  debayer.rs  export.rs  fits_image.rs  info.rs  lib.rs  preview.rs  split_channel.rs  stars.rs  stretch.rs  test_support.rs
libfitz/: Cargo.toml
libfitz/src/: analytics.rs  debayer.rs  decompress.rs  export.rs  fits_image.rs  info.rs  inspect.rs  lib.rs  preview.rs  resize.rs  split_channel.rs  stars.rs  stretch.rs  test_support.rs
src/: compress.rs  copy_header.rs  debayer.rs  decompress.rs  fits_image.rs  hash.rs  info.rs  kitty.rs  main.rs  options.rs  preview.rs  split_channel.rs  stretch.rs  terminal.rs  test_support.rs
test-data/debayer/: uncompressed-bpp32.sha256  uncompressed-bpp8.sha256  uncompressed.sha256
test-data/split/: uncompressed-i16-b.sha256  uncompressed-i16-g.sha256  uncompressed-i16-r.sha256
test-data/stretch/: uncompressed.fits.sha256  uncompressed.tiff.sha256
