[workspace]
resolver = "2"
members = ["libfitz", "fitz-cli", "fitsmith"]

[profile.release]
opt-level = 'z'       # Optimize for binary size (use 's' if 'z' hurts performance too much)
lto = true            # Enable Link-Time Optimization for cross-crate dead code elimination
codegen-units = 1     # Slower compilation, but allows for much better optimization
strip = true          # NB: panic = 'abort' is incompatible with the `bayer` dep, which
                      # is published with a `dylib` crate-type that requires unwinding.

# The size-optimized 'z' above hurts libfitz's own tight per-pixel loops (stretch
# math, scaling, resize, demosaic). Compile just that crate at a speed-oriented
# opt-level while the dependencies — which dominate the binary size — stay at 'z'.
# This roughly halves single-file stretch time, at the cost of a larger binary.
[profile.release.package.libfitz]
opt-level = 2

[profile.profiling]
inherits = "release"
debug = true
strip = false
