[package]
name = "fitz"
version = "0.1.6"
edition = "2024"
license = "MIT"

[[bin]]
name = "fitz"
path = "src/main.rs"

[dependencies]
libfitz = { path = "../libfitz" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
tiff = "0.11"
terminal_size = "0.4"
supports-color = "3.0.2"
base64 = "0.22"
libc = "0.2"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
