[package]
name = "fitz-core"
version = "0.1.5"
edition = "2024"
license = "MIT"

[dependencies]
fitskit = { version = "0.2.0", features = ["gzip"] }
anyhow = "1"
bayer = "0.1.5"
rayon = "1"
tiff = "0.11"
# JPEG/PNG export encoders only — the FITS/TIFF paths use fitskit/tiff directly.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
